make the project executable base

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 output/
 .DS_Store
+
+# PyInstaller build artifacts
+build/
+dist/
+*.spec
+__pycache__/
+*.pyc
+*.pyo
+
+# Executables
+yt-downloader.exe
+yt-downloader
