--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -5,6 +5,9 @@ on:
     types: [created]
   workflow_dispatch: # Allows manual trigger
 
+permissions:
+  contents: write # Required to upload release assets
+
 jobs:
   build:
     name: Build on ${{ matrix.os }}
