--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -22,12 +22,14 @@ jobs:
             output_name: quicktube-windows.exe
             artifact_name: quicktube-windows.exe
           - os: macos-latest
-            output_name: quicktube-macos
-            artifact_name: quicktube-macos
+            output_name: QuickTube.app
+            artifact_name: quicktube-macos.zip
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          set-safe-directory: false
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -86,23 +88,51 @@ jobs:
         run: |
           pyinstaller --onefile --name quicktube-windows --console --add-binary "ffmpeg.exe;." --add-binary "yt-dlp.exe;." quicktube.py
 
-      - name: Build executable with ffmpeg (Unix)
-        if: runner.os != 'Windows'
+      - name: Build macOS app bundle
+        if: runner.os == 'macOS'
         run: |
-          pyinstaller --onefile --name ${{ matrix.output_name }} --console --add-binary "ffmpeg:." --add-binary "yt-dlp:." quicktube.py
+          pyinstaller --onefile --name QuickTube --console --add-binary "ffmpeg:." --add-binary "yt-dlp:." quicktube.py
+
+      - name: Package macOS app as zip
+        if: runner.os == 'macOS'
+        run: |
+          cd dist
+          zip -r quicktube-macos.zip QuickTube.app
+          cd ..
+
+      - name: Build executable with ffmpeg (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          pyinstaller --onefile --name quicktube-linux --console --add-binary "ffmpeg:." --add-binary "yt-dlp:." quicktube.py
 
       - name: Make executable (Unix)
         if: runner.os != 'Windows'
         run: chmod +x dist/${{ matrix.output_name }}
 
-      - name: Upload artifact
+      - name: Upload artifact (macOS)
+        if: runner.os == 'macOS'
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.artifact_name }}
+          path: dist/quicktube-macos.zip
+
+      - name: Upload artifact (non-macOS)
+        if: runner.os != 'macOS'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact_name }}
           path: dist/${{ matrix.output_name }}
 
-      - name: Upload to release
-        if: github.event_name == 'release'
+      - name: Upload to release (macOS)
+        if: github.event_name == 'release' && runner.os == 'macOS'
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/quicktube-macos.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload to release (non-macOS)
+        if: github.event_name == 'release' && runner.os != 'macOS'
         uses: softprops/action-gh-release@v1
         with:
           files: dist/${{ matrix.output_name }}
