--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -3,16 +3,27 @@ name: Build Executables
 on:
   release:
     types: [created]
-  workflow_dispatch: # Allows manual trigger
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "Version number (e.g., 1.0.0)"
+        required: false
+        default: "dev"
 
 permissions:
-  contents: write # Required to upload release assets
+  contents: write
+
+env:
+  PYTHON_VERSION: "3.11"
+  # Pin versions for reproducible builds
+  FFMPEG_VERSION: "latest"
 
 jobs:
   build:
     name: Build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false # Continue building other platforms if one fails
       matrix:
         include:
           - os: ubuntu-latest
@@ -24,6 +35,10 @@ jobs:
           - os: macos-latest
             output_name: QuickTube.app
             artifact_name: quicktube-macos.zip
+          # Add ARM64 macOS build
+          - os: macos-14 # M1/M2 runner
+            output_name: QuickTube.app
+            artifact_name: quicktube-macos-arm64.zip
 
     steps:
       - name: Checkout code
@@ -34,54 +49,86 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: "pip" # Cache pip dependencies
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller yt-dlp
+          pip install pillow  # For icon handling
 
       - name: Download and setup ffmpeg (Windows)
         if: runner.os == 'Windows'
         run: |
-          Invoke-WebRequest -Uri "https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl.zip" -OutFile "ffmpeg.zip"
+          $ErrorActionPreference = 'Stop'
+          Write-Host "Downloading ffmpeg..."
+          Invoke-WebRequest -Uri "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl.zip" -OutFile "ffmpeg.zip"
           Expand-Archive -Path "ffmpeg.zip" -DestinationPath "ffmpeg_temp"
           $ffmpegPath = Get-ChildItem -Path "ffmpeg_temp" -Recurse -Filter "ffmpeg.exe" | Select-Object -First 1
+          if (-not $ffmpegPath) { throw "ffmpeg.exe not found" }
           Copy-Item $ffmpegPath.FullName -Destination "ffmpeg.exe"
+          # Verify ffmpeg works
+          .\ffmpeg.exe -version
           Remove-Item -Path "ffmpeg.zip", "ffmpeg_temp" -Recurse -Force
 
       - name: Download yt-dlp (Windows)
         if: runner.os == 'Windows'
         run: |
           Invoke-WebRequest -Uri "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp.exe" -OutFile "yt-dlp.exe"
+          .\\yt-dlp.exe --version
+
+      - name: Verify binaries exist
+        shell: bash
+        run: |
+          echo "Checking for required binaries..."
+          if [ "$RUNNER_OS" == "Windows" ]; then
+            ls -la ffmpeg.exe yt-dlp.exe
+          else
+            ls -la ffmpeg yt-dlp
+          fi
 
       - name: Download and setup ffmpeg (macOS)
         if: runner.os == 'macOS'
         run: |
-          brew install ffmpeg
-          cp $(which ffmpeg) ffmpeg
+          # Use yt-dlp's ffmpeg builds for better compatibility
+          ARCH=$(uname -m)
+          if [ "$ARCH" = "arm64" ]; then
+            curl -L "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-macos-arm64.tar.xz" -o ffmpeg.tar.xz
+          else
+            curl -L "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-macos64.tar.xz" -o ffmpeg.tar.xz
+          fi
+          tar -xf ffmpeg.tar.xz
+          find . -name "ffmpeg" -type f -perm +111 -exec cp {} ffmpeg \; 2>/dev/null || \
+            find . -name "ffmpeg" -type f -executable -exec cp {} ffmpeg \;
           chmod +x ffmpeg
+          ./ffmpeg -version
+          rm -rf ffmpeg.tar.xz ffmpeg-*
 
       - name: Download yt-dlp (macOS)
         if: runner.os == 'macOS'
         run: |
           curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp_macos -o yt-dlp
           chmod +x yt-dlp
+          ./yt-dlp --version
 
       - name: Download and setup ffmpeg (Linux)
         if: runner.os == 'Linux'
         run: |
-          wget https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz
-          tar -xf ffmpeg-release-amd64-static.tar.xz
+          # Use yt-dlp's ffmpeg builds for consistency
+          wget -q https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz
+          tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz
           find . -name "ffmpeg" -type f -executable -exec cp {} ffmpeg \;
           chmod +x ffmpeg
-          rm -rf ffmpeg-release-amd64-static.tar.xz ffmpeg-*-static
+          ./ffmpeg -version
+          rm -rf ffmpeg-master-latest-linux64-gpl.tar.xz ffmpeg-*-linux64-gpl
 
       - name: Download yt-dlp (Linux)
         if: runner.os == 'Linux'
         run: |
-          wget https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp
+          wget -q https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp
           chmod +x yt-dlp
+          ./yt-dlp --version
 
       - name: Build executable with ffmpeg (Windows)
         if: runner.os == 'Windows'
@@ -96,6 +143,10 @@ jobs:
       - name: Create macOS app bundle
         if: runner.os == 'macOS'
         run: |
+          # Get version from release tag or input
+          VERSION="${GITHUB_REF_NAME:-${{ github.event.inputs.version || '1.0.0' }}}"
+          VERSION="${VERSION#v}"  # Remove 'v' prefix if present
+
           mkdir -p QuickTube.app/Contents/MacOS
           mkdir -p QuickTube.app/Contents/Resources
 
@@ -106,12 +157,15 @@ jobs:
           cat > QuickTube.app/Contents/MacOS/launcher.sh << 'EOF'
           #!/bin/bash
           DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+          # Create output directory next to app if it doesn't exist
+          APP_DIR="$(dirname "$(dirname "$(dirname "$DIR")")")" 
+          mkdir -p "$APP_DIR/output" 2>/dev/null || true
           open -a Terminal "$DIR/QuickTube"
           EOF
           chmod +x QuickTube.app/Contents/MacOS/launcher.sh
 
-          # Create Info.plist
-          cat > QuickTube.app/Contents/Info.plist << 'EOF'
+          # Create Info.plist with version
+          cat > QuickTube.app/Contents/Info.plist << EOF
           <?xml version="1.0" encoding="UTF-8"?>
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
           <plist version="1.0">
@@ -122,14 +176,20 @@ jobs:
               <string>com.quicktube.app</string>
               <key>CFBundleName</key>
               <string>QuickTube</string>
+              <key>CFBundleDisplayName</key>
+              <string>QuickTube</string>
               <key>CFBundlePackageType</key>
               <string>APPL</string>
               <key>CFBundleShortVersionString</key>
-              <string>1.0</string>
+              <string>${VERSION}</string>
               <key>CFBundleVersion</key>
-              <string>1</string>
+              <string>${VERSION}</string>
               <key>LSMinimumSystemVersion</key>
-              <string>10.13</string>
+              <string>10.15</string>
+              <key>NSHighResolutionCapable</key>
+              <true/>
+              <key>LSApplicationCategoryType</key>
+              <string>public.app-category.utilities</string>
           </dict>
           </plist>
           EOF
@@ -152,32 +212,66 @@ jobs:
         if: runner.os != 'Windows'
         run: chmod +x dist/${{ matrix.output_name }}
 
+      - name: Test executable (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          echo "Testing executable..."
+          ./dist/quicktube-linux --help 2>&1 || echo "Note: App requires terminal interaction"
+
+      - name: Test executable (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          echo "Testing executable..."
+          # Just verify the file exists and is executable
+          Get-Item dist\\quicktube-windows.exe
+
+      - name: Calculate checksums
+        shell: bash
+        run: |
+          cd dist
+          if [ "$RUNNER_OS" == "macOS" ]; then
+            shasum -a 256 quicktube-macos.zip > quicktube-macos.zip.sha256
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+            sha256sum quicktube-windows.exe > quicktube-windows.exe.sha256
+          else
+            sha256sum quicktube-linux > quicktube-linux.sha256
+          fi
+          cat *.sha256
+
       - name: Upload artifact (macOS)
         if: runner.os == 'macOS'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact_name }}
-          path: dist/quicktube-macos.zip
+          path: |
+            dist/quicktube-macos.zip
+            dist/quicktube-macos.zip.sha256
 
       - name: Upload artifact (non-macOS)
         if: runner.os != 'macOS'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact_name }}
-          path: dist/${{ matrix.output_name }}
+          path: |
+            dist/${{ matrix.output_name }}
+            dist/${{ matrix.output_name }}.sha256
 
       - name: Upload to release (macOS)
         if: github.event_name == 'release' && runner.os == 'macOS'
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
-          files: dist/quicktube-macos.zip
+          files: |
+            dist/quicktube-macos.zip
+            dist/quicktube-macos.zip.sha256
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload to release (non-macOS)
         if: github.event_name == 'release' && runner.os != 'macOS'
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
-          files: dist/${{ matrix.output_name }}
+          files: |
+            dist/${{ matrix.output_name }}
+            dist/${{ matrix.output_name }}.sha256
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
