--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -1,8 +1,9 @@
 name: Build Executables
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - 'v*'  # Trigger on version tags like v1.0.0, v2.1.3, etc.
   workflow_dispatch:
     inputs:
       version:
@@ -246,21 +247,27 @@ jobs:
             dist/${{ matrix.output_name }}.sha256
 
       - name: Upload to release (macOS)
-        if: github.event_name == 'release' && runner.os == 'macOS'
+        if: startsWith(github.ref, 'refs/tags/') && runner.os == 'macOS'
         uses: softprops/action-gh-release@v2
         with:
           files: |
             dist/quicktube-macos.zip
             dist/quicktube-macos.zip.sha256
+          draft: false
+          prerelease: false
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload to release (non-macOS)
-        if: github.event_name == 'release' && runner.os != 'macOS'
+        if: startsWith(github.ref, 'refs/tags/') && runner.os != 'macOS'
         uses: softprops/action-gh-release@v2
         with:
           files: |
             dist/${{ matrix.output_name }}
             dist/${{ matrix.output_name }}.sha256
+          draft: false
+          prerelease: false
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
