--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -3,7 +3,7 @@ name: Build Executables
 on:
   push:
     tags:
-      - 'v*'  # Trigger on version tags like v1.0.0, v2.1.3, etc.
+      - "v*" # Trigger on version tags like v1.0.0, v2.1.3, etc.
   workflow_dispatch:
     inputs:
       version:
