--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -61,6 +61,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+          submodules: false
 
       - name: Set up Python
         uses: actions/setup-python@v5
